<resources>
    <string name="app_name">Android lab</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="look_at_my_gui">Look at my Gui</string>
    <string name="click_here">CLICK HERE</string>
    <string name="check_this_out">Check this out</string>
    <string name="switch_on_off">Switch ON/OFF</string>
    <string name="type_here">Type Here</string>
    <string name="snack_message">The swicth is now</string>
    <string name="toast_message">Here is more infomration</string>
    <string name="Enter_your_email_addr">Enter your email Address:</string>
    <string name="type_email_here">Type email here</string>
    <string name="Type_your_passwd">Type your password</string>
    <string name="Your_profile">Your profile</string>
    <string name="Your_name">Your name:</string>
    <string name="Enter_name">Enter your name</string>
    <string name="Your_email">Your Email:</string>
    <string name="Enter_your_email">Enter your e-mail</string>
    <string name="Your_picture">Your picture:</string>
    <string name="button_above">Click the button above to take a picture</string>
    <string name="login">LOGIN</string>
    <string name="GoToChat">Go to Chat</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="GoToWeather">Weather Forecast</string>
    <string name="minTemp"> The min temperature is : </string>
    <string name="maxTemp"> The max temperature is : </string>
    <string name="currTemp"> The current temperature is : </string>
    <string name="uvRating"> Th UV rating is : </string>
    <string name="celcius"> Celcius </string>
    <string name="message_here">Message here</string>
    <string name="is_a_send_message"> Is a send message</string>
    <string name="GoToToolbar"> Go to Toolbar page</string>
    <string name="boy_icon">boy</string>
    <string name="flag_icon">flag</string>
    <string name="message_icon">message</string>
    <string name="girl_icon">girl</string>
    <string name="look_icon">look to the message</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="hello_message">Hello</string>
    <string name="lab3_emailText">Enter your Email Address:</string>
    <string name="lab3_typeEmail">Type Email Here</string>
    <string name="lab3_passwordText">Type your password:</string>
    <string name="lab3_login">Login</string>

</resources>