<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="fill"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/look_at_my_gui"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:backgroundTint="@color/grey"
        android:text="@string/click_here"
        android:textColor="@color/black" />

    <CheckBox
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/check_this_out" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="198dp"
        android:layout_height="107dp"
        android:layout_row="2"
        android:layout_column="0"
        android:contentDescription="TODO"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/switch_on_off" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/type_here"
        android:inputType="textPersonName"
        android:layout_marginTop="0dp" />

</GridLayout>