<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecast">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="120dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/currentWeather"
            android:layout_width="200dp"
            android:layout_height="200dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/currentTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currTemp" />

        <TextView
            android:id="@+id/minTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minTemp" />

        <TextView
            android:id="@+id/maxTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maxTemp" />

        <TextView
            android:id="@+id/uvRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uvRating" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>